--- a/index.ipynb
+++ b/index.ipynb
@@ -299,9 +299,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "text_values = [cities[0]['City'], cities[1]['City'], cities[2]['City']]\n",
-    "text_values\n",
-    "bar_trace_first_three_pops = {'type': 'bar', 'text': text_values}"
+    "text_values =  [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]\n",
+    "bar_trace_first_three_pops = {'type': 'bar', 'x': x_values, 'y': y_values, 'text': text_values}"
    ]
   },
   {
