--- a/index.ipynb
+++ b/index.ipynb
@@ -389,7 +389,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "area_values\n",
+    "area_values = []\n",
     "bar_trace_first_three_areas = {'type': 'scatter', 'x': [text_values], 'y': [[cities[0]['Population'], cities[1]['Population'], cities[2]['Population']], 'text': []}\n",
     "bar_trace_first_three_pops = {'type': 'scatter', 'x': [], 'y': [], 'text': []}"
    ]
